[package]
name = "crabler"
version = "0.1.28"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"
description = "Web scraper for Crabs"
build = "build.rs"
homepage = "https://github.com/Gonzih/crabler"
repository = "https://github.com/Gonzih/crabler"
documentation = "https://docs.rs/crabler"
readme = "README.md"
keywords = ["html", "css" , "scraper", "web"]
license = "MIT"
# license-file = "LICENSE"

[features]
debug = []

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
futures = "0.3.18"
async-trait = "0.1.52"
thiserror = "1.0"
log = { version = "0.4.14", features = ["kv_unstable"] }
femme = "2.1.1"
crabler_derive = "0.1.8"
crabquery = "0.1.9"
reqwest = { version = "0.11.16", features = ["rustls"] }

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
